[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/Nene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Player_Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Environment/Earth_Tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/NeuralNetwork.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Objects/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/UI/CanvasLayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Experiment.gd" type="Script" id=7]

[node name="Experiment" type="Node2D"]
script = ExtResource( 7 )

[node name="World" type="Node2D" parent="."]

[node name="Map" type="Node2D" parent="World"]

[node name="Earth_Tile" parent="World/Map" instance=ExtResource( 3 )]
collision_layer = 524289
collision_mask = 524289
tile_data = PoolIntArray( -131041, 0, 0, -131040, 0, 1, -131039, 0, 1, -131038, 0, 1, -131037, 0, 2, -11, 0, 0, -10, 0, 1, -9, 0, 1, -8, 0, 2, -65505, 0, 65536, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 65538, 65525, 0, 65536, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 65538, 8, 0, 196608, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196609, 14, 0, 196609, 15, 0, 196609, 16, 0, 196609, 17, 0, 196609, 18, 0, 196610, 31, 0, 65536, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, 35, 0, 65538, 131061, 0, 65536, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65538, 65567, 0, 65536, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 65538, 196597, 0, 65536, 196598, 0, 65537, 196599, 0, 65537, 196600, 0, 65538, 131103, 0, 65536, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65538, 262133, 0, 65536, 262134, 0, 65537, 262135, 0, 65537, 262136, 0, 65538, 196639, 0, 65536, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65538, 327669, 0, 65536, 327670, 0, 65537, 327671, 0, 65537, 327672, 0, 65538, 262145, 0, 196608, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196610, 262165, 0, 196608, 262166, 0, 196609, 262167, 0, 196609, 262168, 0, 196609, 262169, 0, 196610, 262175, 0, 65536, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65538, 393205, 0, 65536, 393206, 0, 65537, 393207, 0, 65537, 393208, 0, 65538, 327709, 0, 196608, 327710, 0, 196609, 327711, 0, 262150, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65538, 458741, 0, 65536, 458742, 0, 65537, 458743, 0, 65537, 458744, 0, 262149, 458745, 0, 196609, 458746, 0, 196609, 458747, 0, 196610, 393247, 0, 65536, 393248, 0, 65537, 393249, 0, 65537, 393250, 0, 65537, 393251, 0, 65538, 524277, 0, 65536, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65538, 458765, 0, 196608, 458766, 0, 196609, 458767, 0, 196609, 458768, 0, 196609, 458769, 0, 196610, 458783, 0, 65536, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 65537, 458787, 0, 65538, 589813, 0, 65536, 589814, 0, 65537, 589815, 0, 65537, 589816, 0, 65538, 524319, 0, 65536, 524320, 0, 65537, 524321, 0, 65537, 524322, 0, 65537, 524323, 0, 65538, 655349, 0, 65536, 655350, 0, 65537, 655351, 0, 65537, 655352, 0, 65538, 589855, 0, 65536, 589856, 0, 65537, 589857, 0, 65537, 589858, 0, 65537, 589859, 0, 65538, 720885, 0, 65536, 720886, 0, 65537, 720887, 0, 65537, 720888, 0, 131077, 720889, 0, 1, 720890, 0, 1, 720891, 0, 1, 720892, 0, 1, 720893, 0, 1, 720894, 0, 1, 720895, 0, 1, 655360, 0, 1, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 1, 655384, 0, 1, 655385, 0, 1, 655386, 0, 1, 655387, 0, 1, 655388, 0, 1, 655389, 0, 1, 655390, 0, 1, 655391, 0, 131078, 655392, 0, 65537, 655393, 0, 65537, 655394, 0, 65537, 655395, 0, 65538, 786421, 0, 65536, 786422, 0, 65537, 786423, 0, 65537, 786424, 0, 65537, 786425, 0, 65537, 786426, 0, 65537, 786427, 0, 65537, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65538, 851957, 0, 65536, 851958, 0, 65537, 851959, 0, 65537, 851960, 0, 65537, 851961, 0, 65537, 851962, 0, 65537, 851963, 0, 65537, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65537, 786467, 0, 65538, 917493, 0, 65536, 917494, 0, 65537, 917495, 0, 65537, 917496, 0, 65537, 917497, 0, 65537, 917498, 0, 65537, 917499, 0, 65537, 917500, 0, 65537, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 65537, 852001, 0, 65537, 852002, 0, 65537, 852003, 0, 65538, 983029, 0, 65536, 983030, 0, 65537, 983031, 0, 65537, 983032, 0, 65537, 983033, 0, 65537, 983034, 0, 65537, 983035, 0, 65537, 983036, 0, 65537, 983037, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65537, 917537, 0, 65537, 917538, 0, 65537, 917539, 0, 65538, 1048565, 0, 131072, 1048566, 0, 131073, 1048567, 0, 131073, 1048568, 0, 131073, 1048569, 0, 131073, 1048570, 0, 131073, 1048571, 0, 131073, 1048572, 0, 131073, 1048573, 0, 131073, 1048574, 0, 131073, 1048575, 0, 131073, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 131073, 983050, 0, 131073, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131073, 983056, 0, 131073, 983057, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 131073, 983063, 0, 131073, 983064, 0, 131073, 983065, 0, 131073, 983066, 0, 131073, 983067, 0, 131073, 983068, 0, 131073, 983069, 0, 131073, 983070, 0, 131073, 983071, 0, 131073, 983072, 0, 131073, 983073, 0, 131073, 983074, 0, 131073, 983075, 0, 131074 )

[node name="Nene" parent="World" instance=ExtResource( 1 )]
position = Vector2( 550.828, 322.242 )

[node name="Player_Camera" parent="World/Nene" instance=ExtResource( 2 )]

[node name="Coin" parent="World" instance=ExtResource( 5 )]
position = Vector2( -281.675, 426.826 )

[node name="NeuralNetwork" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CanvasLayer" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="EpochTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EpochTimer" to="." method="_on_EpochTimer_timeout"]
